--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Calc</title>
 </head>
-<body class="bg-red-200 font-mono grid justify-center p-10">
-    <h1 class="mb-10 text-center">Calc Stuff</h1>
+<body class="bg-red-200 font-mono grid justify-center p-5">
+    <h1 class="mb-5 text-center">Web Calculator</h1>
     <div class="grid text-xl justify-end items-end bg-red-400 h-[15vh] w-[50vh] p-5 mb-10">
-        <p id="memDisplay" class="text-slate-700 text-[16px] text-end">Hello!</p>
+        <p id="memDisplay" class="text-slate-700 text-[16px] text-end"></p>
         <p id="calcDisplay" class="text-end">Hello!</p>
     </div>
-    <div class="grid grid-col-4 grid-row-4 justify-center bg-color-red-400 w-[50vh] gap-4">
+    <div class="grid grid-col-4 grid-row-5 justify-center bg-color-red-400 w-[50vh] gap-4">
         <button onclick="buttonClicked(7)" id="button" name="7" class="col-start-1 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">7</button>
         <button onclick="buttonClicked(8)" id="button" name="8" class="col-start-2 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">8</button>
         <button onclick="buttonClicked(9)" id="button" name="9" class=" col-start-3 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">9</button>
@@ -23,11 +23,13 @@
         <button onclick="buttonClicked(2)" id="button" name="2" class="col-start-2 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">2</button>
         <button onclick="buttonClicked(3)" id="button" name="3" class=" col-start-3 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">3</button>
         <button onclick="buttonClicked(0)" id="button" name="0" class=" col-start-2 bg-indigo-200 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">0</button>
-        <button onclick="clearDisplay()" id="button" name="2" class="col-start-4 bg-indigo-400 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-600">CE</button>
-        <button onclick="buttonClicked('+')" id="button" name="+" class=" col-start-4 bg-indigo-200 row-start-2 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">+</button>
-        <button onclick="buttonClicked('-')" id="button" name="-" class=" col-start-4 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">-</button>
+        <button onclick="clearDisplay()" id="button" name="2" class="col-start-3 bg-indigo-400 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-600">CE</button>
+        <button onclick="addPressed()" id="button" name="+" class=" col-start-4 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">+</button>
+        <button onclick="minusPressed()" id="button" name="-" class=" col-start-4 bg-indigo-200 row-start-2 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">-</button>
         <button onclick="buttonClicked('.')" id="button" name="." class=" col-start-1 bg-indigo-200 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">.</button>
-        <button onclick="" id="button" name="=" class=" col-start-3 col-span-2 bg-indigo-200 row-start-4 h-[60px] w-[150px] hover:cursor-pointer hover:bg-indigo-400">=</button>
+        <button onclick="multiplyPressed()" id="button" name="*" class=" col-start-4 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">*</button>
+        <button onclick="dividePressed()" id="button" name="/" class=" col-start-4 bg-indigo-200 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">/</button>
+        <button onclick="equalsPressed()" id="button" name="=" class=" col-start-1 col-span-4 bg-indigo-200 row-start-5 h-[60px] w-[300px] hover:cursor-pointer hover:bg-indigo-400">=</button>
     </div>
     </div>
     <script src="index.js"></script>
