--- a/index.html
+++ b/index.html
@@ -7,30 +7,31 @@
     <title>Calc</title>
 </head>
 <body class="bg-red-200 font-mono grid justify-center p-5">
-    <h1 class="mb-5 text-center">Web Calculator</h1>
-    <div class="grid text-xl justify-end items-end bg-red-400 h-[15vh] w-[50vh] p-5 mb-10">
-        <p id="memDisplay" class="text-slate-700 text-[16px] text-end"></p>
-        <p id="calcDisplay" class="text-end">Hello!</p>
-    </div>
-    <div class="grid grid-col-4 grid-row-5 justify-center bg-color-red-400 w-[50vh] gap-4">
-        <button onclick="buttonClicked(7)" id="button" name="7" class="col-start-1 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">7</button>
-        <button onclick="buttonClicked(8)" id="button" name="8" class="col-start-2 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">8</button>
-        <button onclick="buttonClicked(9)" id="button" name="9" class=" col-start-3 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">9</button>
-        <button onclick="buttonClicked(4)" id="button" name="4" class="col-start-1 row-start-2 bg-indigo-200 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">4</button>
-        <button onclick="buttonClicked(5)" id="button" name="5" class="col-start-2 row-start-2 bg-indigo-200 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">5</button>
-        <button onclick="buttonClicked(6)" id="button" name="6" class=" col-start-3 row-start-2 bg-indigo-200 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">6</button>
-        <button onclick="buttonClicked(1)" id="button" name="1" class="col-start-1 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">1</button>
-        <button onclick="buttonClicked(2)" id="button" name="2" class="col-start-2 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">2</button>
-        <button onclick="buttonClicked(3)" id="button" name="3" class=" col-start-3 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">3</button>
-        <button onclick="buttonClicked(0)" id="button" name="0" class=" col-start-2 bg-indigo-200 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">0</button>
-        <button onclick="clearDisplay()" id="button" name="2" class="col-start-3 bg-indigo-400 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-600">CE</button>
-        <button onclick="addPressed()" id="button" name="+" class=" col-start-4 bg-indigo-200 row-start-1 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">+</button>
-        <button onclick="minusPressed()" id="button" name="-" class=" col-start-4 bg-indigo-200 row-start-2 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">-</button>
-        <button onclick="buttonClicked('.')" id="button" name="." class=" col-start-1 bg-indigo-200 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">.</button>
-        <button onclick="multiplyPressed()" id="button" name="*" class=" col-start-4 bg-indigo-200 row-start-3 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">*</button>
-        <button onclick="dividePressed()" id="button" name="/" class=" col-start-4 bg-indigo-200 row-start-4 h-[60px] w-[60px] hover:cursor-pointer hover:bg-indigo-400">/</button>
-        <button onclick="equalsPressed()" id="button" name="=" class=" col-start-1 col-span-4 bg-indigo-200 row-start-5 h-[60px] w-[300px] hover:cursor-pointer hover:bg-indigo-400">=</button>
-    </div>
+    <div class="w-full max-w-3xl">
+        <h1 class="mb-5 text-center text-xl sm:text-2xl md:text-3xl">Web Calculator</h1>
+        <div class="grid text-xl justify-end items-end bg-red-400 h-16 sm:h-36 w-full px-4 py-2 mb-6 rounded-lg shadow">
+            <p id="memDisplay" class="text-slate-700 text-sm sm:text-base text-end truncate"></p>
+            <p id="calcDisplay" class="text-end text-md sm:text-xl"></p>
+        </div>
+        <div class="grid grid-col-4 grid-row-5 justify-center bg-color-red-400 w-full max-w-md gap-4">
+            <button onclick="buttonClicked('7')" id="button" name="7" class="col-start-1 bg-indigo-200 row-start-1 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl hover:cursor-pointer hover:bg-indigo-400">7</button>
+            <button onclick="buttonClicked('8')" id="button" name="8" class="col-start-2 bg-indigo-200 row-start-1 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">8</button>
+            <button onclick="buttonClicked('9')" id="button" name="9" class=" col-start-3 bg-indigo-200 row-start-1 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">9</button>
+            <button onclick="buttonClicked('4')" id="button" name="4" class="col-start-1 row-start-2 bg-indigo-200 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">4</button>
+            <button onclick="buttonClicked('5')" id="button" name="5" class="col-start-2 row-start-2 bg-indigo-200 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">5</button>
+            <button onclick="buttonClicked('6')" id="button" name="6" class=" col-start-3 row-start-2 bg-indigo-200 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">6</button>
+            <button onclick="buttonClicked('1')" id="button" name="1" class="col-start-1 bg-indigo-200 row-start-3 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">1</button>
+            <button onclick="buttonClicked('2')" id="button" name="2" class="col-start-2 bg-indigo-200 row-start-3 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">2</button>
+            <button onclick="buttonClicked('3')" id="button" name="3" class=" col-start-3 bg-indigo-200 row-start-3 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">3</button>
+            <button onclick="buttonClicked('0')" id="button" name="0" class=" col-start-2 bg-indigo-200 row-start-4 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">0</button>
+            <button onclick="clearDisplay()" id="button" name="2" class="col-start-3 bg-indigo-400 row-start-4 h-14 md:h-16 sm:h-14 w-full aspect-square rounded-lg text-lg md:text-xl hover:cursor-pointer hover:bg-indigo-600">CE</button>
+            <button onclick="calculateNumber('+')" id="button" name="+" class=" col-start-4 bg-indigo-200 row-start-1 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">+</button>
+            <button onclick="calculateNumber('-')" id="button" name="-" class=" col-start-4 bg-indigo-200 row-start-2 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">-</button>
+            <button onclick="buttonClicked('.')" id="button" name="." class=" col-start-1 bg-indigo-200 row-start-4 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">.</button>
+            <button onclick="calculateNumber('*')" id="button" name="*" class=" col-start-4 bg-indigo-200 row-start-3 h-14 md:h-16 sm:h-14 w-full aspect-square rounded-lg text-lg md:text-xl hover:cursor-pointer hover:bg-indigo-400">*</button>
+            <button onclick="calculateNumber('/')" id="button" name="/" class=" col-start-4 bg-indigo-200 row-start-4 h-14 md:h-16 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">/</button>
+            <button onclick="calculateNumber('=')" id="button" name="=" class=" col-start-1 col-span-4 bg-indigo-200 row-start-5 h-14 md:h-16 sm:h-14 w-full text-lg md:text-xl rounded-lg text-center hover:cursor-pointer hover:bg-indigo-400">=</button>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
