fix display font on desktop

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="bg-red-200 font-mono grid justify-center p-5">
     <div class="w-full max-w-3xl">
         <h1 class="mb-5 text-center text-xl sm:text-2xl md:text-3xl">Web Calculator</h1>
-        <div class="grid text-xl justify-end items-end bg-red-400 h-16 sm:h-36 w-full px-4 py-2 mb-6 rounded-lg shadow">
-            <p id="memDisplay" class="text-slate-700 text-sm sm:text-base text-end truncate"></p>
-            <p id="calcDisplay" class="text-end text-md sm:text-xl"></p>
+        <div class="grid text-xl justify-end items-end bg-red-400 h-16 sm:h-36 w-full px-4 py-2 md:p-6 mb-6 rounded-lg shadow">
+            <p id="memDisplay" class="text-slate-700 text-sm sm:text-3xl text-end truncate"></p>
+            <p id="calcDisplay" class="text-end text-md sm:text-4xl"></p>
         </div>
         <div class="grid grid-col-4 grid-row-5 justify-center bg-color-red-400 w-full max-w-md gap-4">
             <button onclick="buttonClicked('7')" id="button" name="7" class="col-start-1 bg-indigo-200 row-start-1 h-14 md:h-25 sm:h-14 w-full aspect-square text-lg md:text-xl rounded-lg hover:cursor-pointer hover:bg-indigo-400">7</button>
